Add ability to view ALL scores for a goal. NEEDS TESTS

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -203,6 +203,8 @@ h2.score
   font-family: "nta", Arial, sans-serif
   text-align: center
 
+.row.score
+  padding-bottom: 3rem
 
 /*TODO: DRY up our scores css */
 
