Add links to footer to download Goals and Scores. Added accompanying routes and tests including test routes for .../show_export

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -160,6 +160,10 @@ h3, p.lead
 
 #footer
   margin-top: 5rem
+  b
+    font-weight: bold
+  ul
+    padding-top: 0.5rem
 
 .deadline, .subgoal-box .owner
   font-size: 1.25rem
