--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -76,11 +76,19 @@
       = yield
 
 - content_for :footer_top do
-  - if (Rails.env.development? && User.where(admin: true).count > 0 && User.where(admin: nil).count > 0)
-    /=link_to "HELLOO", User.first
-    h4 Dev tools
-    ul
-      li =link_to "Sign in as admin", signin_path(email: User.where(admin: true).first.email)
-      li =link_to "Sign in as non-admin", signin_path(email: User.where(admin: nil).first.email)
+  main
+    .row
+      -if signed_in?
+        .col-sm-6
+          b Download data
+          ul
+            li = link_to "Download goals (CSV)", goals_path(:format=>:csv)
+            li = link_to "Download status updates (CSV)", scores_path(:format=>:csv)
+      - if (Rails.env.development? && User.where(admin: true).count > 0 && User.where(admin: nil).count > 0)
+        .col-sm-6
+          b Development tools
+          ul
+            li =link_to "Sign in as admin", signin_path(email: User.where(admin: true).first.email)
+            li =link_to "Sign in as non-admin", signin_path(email: User.where(admin: nil).first.email)
 
 = render template: "layouts/govuk_template"
