Added link to video on About page.

--- a/app/views/welcome/about.html.slim
+++ b/app/views/welcome/about.html.slim
@@ -3,6 +3,8 @@
 
   p.lede The Delivery Ops team is exploring new ways of reporting on what GDS is doing. Do you like seeing progress against the business plan goals? Is it helpful to have a central place to share and view this information across GDS? Would you commit to updating this regularly?
 
+  h2 =link_to "Watch a 90 second introductory video", "https://www.youtube.com/watch?v=4YMtGCzWwc0&feature=youtu.be"
+
   h2 About the content
   p These milestones come from the latest business plans and conversations with the group project management offices (PMOs). We expect them to evolve throughout the year and need good feedback to ensure they always reflect what we're doing (and have done). Ideally they should be <a href="https://en.wikipedia.org/wiki/SMART_criteria">specific, measurable, attainable, relavent, and timebound (SMART)</a>. Please give feedback to your group PMO so we can improve them.
 
