Move piecharts to look a little nicer. Update my fixtures so a few are randomly aassigned to SDP. Some tweaks to Readme.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -300,6 +300,9 @@ div.danger, span.danger, a.danger
       min-width: 40px
       @extend .heading-medium
 
+.topaligned
+  /* same margin as the paragraph tag to make things lign up */
+  margin-top: 0.26316em
 
 form#search
   input.js-search-focus
