--- a/app/views/goals/_pie_chart.html.slim
+++ b/app/views/goals/_pie_chart.html.slim
@@ -22,5 +22,5 @@ javascript:
 </script>
 
 / uncomment when ready to show pie
-h3 Goals by status
+h3.topaligned Goals by status
 #donutchart style="width: 100%;"
