refactor the group view into a partial, add complete group info to home page. Modify features so tests pass.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -263,6 +263,10 @@ div.danger, span.danger, a.danger
     margin-top: 0.8rem
     display: block
 
+.padded-row
+  margin-top: 2.5em
+
+
   p
     display: block
     margin: 15px 0 10px 0
@@ -270,7 +274,7 @@ div.danger, span.danger, a.danger
 .panel.admin
   margin-top: 2rem
   border: 0
-  background: #FE8
+  background: $panel-colour
 
 .status-box
   margin-top: 2rem
