Add links below pie charts and add filtering functionality to search to allow clicking on status and filtering to only those goals within a group, team, SDP, etc.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -96,7 +96,9 @@
   font-weight: 200
   font-size: 1.4rem
 
-
+ul.pie_links
+  font-size: 1.5rem
+  
 ol.nice_list
   width: 100%
   counter-reset: item
