show the search parameters on the results page. Some style tweaks including less padding around H1 and H2.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -98,7 +98,7 @@
 
 ul.pie_links
   font-size: 1.5rem
-  
+
 ol.nice_list
   width: 100%
   counter-reset: item
@@ -151,9 +151,11 @@ h1
   @extend .heading-xlarge
   padding-top: 7px
   margin-top: 0
+  margin-bottom: 1rem
 
 h2
   @extend .heading-large
+  margin-top: 1rem
 
 /* yep, using the same style for now...*/
 h3, p.lead
