--- a/app/views/goals/_goal.html.slim
+++ b/app/views/goals/_goal.html.slim
@@ -1,5 +1,5 @@
 - cols = 2
-div class="col-sm-#{12/cols} subgoal-box" id="goal_#{goal_counter+1}"
+div class="col-sm-#{12/cols} subgoal-box" id="goal_#{goal.id}"
   .row
     .col-xs-1
       h3.number  =goal_counter+1
@@ -10,12 +10,12 @@ div class="col-sm-#{12/cols} subgoal-box" id="goal_#{goal_counter+1}"
       p =link_to goal.name, goal
       -if goal.owner
         .owner =link_to goal.owner.name, goal.owner
-        -if goal.score.nil?
-          .owner.danger No progress reported
-        - else
-         .owner
-           =link_to "Latest progress: " + time_ago_in_words(goal.score.created_at) + " ago", "javascript:$('#update#{goal_counter+1}').toggle()", {:title=>"See latest progress."}
-         div id="update#{goal_counter+1}" style="display: none" =goal.score.reason
+      -if goal.score.nil?
+        .owner.danger No progress reported
+      - else
+       .owner
+         =link_to "Latest progress: " + time_ago_in_words(goal.score.created_at) + " ago", "javascript:$('#update#{goal.id}').toggle()", {:title=>"See latest progress."}
+         div id="update#{goal.id}" style="display: none" =goal.score.reason
       .owner Due: #{goal.deadline.strftime("%h %Y")}
       .smaller =pluralize(goal.children.count,"Subgoal") unless goal.children.empty?
     /.tiny_status.pull-right ON TRACK
