--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,6 +28,7 @@
           ul#proposition-links
             li =link_to "Vision", goals_path
             li =link_to "Groups and Teams", groups_path
+            li = link_to "SDP goals", sdp_goals_path
             /li =link_to "Teams", teams_path
             li =link_to "About", about_path
             -if is_admin?
