--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -33,15 +33,15 @@
           .col-sm-12
             h3
               ' Latest progress
-              - if can_modify? @goal
-                span.smaller
-                  ' &nbsp;
-                  =link_to "Make new progress update", new_goal_score_path(@goal)
+              /- if can_modify? @goal
+              span.smaller
+                ' &nbsp;
+                =link_to "Make new progress update", new_goal_score_path(@goal)
             - if(@goal.scores.empty?)
               p
                 | No updates yet. &nbsp;
-              -if can_modify? @goal
-                =link_to "Make first progress update", new_goal_score_path(@goal), :class=>"button"
+              /-if can_modify? @goal
+              =link_to "Make first progress update", new_goal_score_path(@goal), :class=>"button"
             - else #only show current score
               == render @goal.score
               .row
