--- a/app/views/scores/_score.html.slim
+++ b/app/views/scores/_score.html.slim
@@ -9,4 +9,4 @@
     .small =link_to score.user.name, @goal.score.user
     - if is_admin?
       .small.pull-right
-        = link_to "Edit score", edit_score_path(score)
+        = link_to "Edit", edit_score_path(score)
