--- a/app/views/goals/_breadcrumb.html.slim
+++ b/app/views/goals/_breadcrumb.html.slim
@@ -1,6 +1,6 @@
 .breadcrumbs
   ol
-    li =link_to "Home", goals_path
+    li =link_to "Home", root_path
     - if @goal
       - g = @goal
       - ancestors = []
