--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -4,5 +4,5 @@
     .print_only.pull-right
       small As of #{display_date(Time.now)}
 //pie chart setup
-== render 'goals/pie_chart_prep.html.slim'
+/== render 'goals/pie_chart_prep.html.slim'
 == render @group
