--- a/app/views/teams/show.html.slim
+++ b/app/views/teams/show.html.slim
@@ -10,11 +10,12 @@
         'Part of the
         =link_to @team.group.name + " Group", @team.group
     - if is_admin?
-      .panel.admin
+      .admin
         ul
           li =link_to "Edit Team", edit_team_path(@team)
           li =link_to "Create new team goal", new_goal_path(team: @team)
 
+/
   .col-sm-6
     == render 'goals/pie_chart_prep.html.slim'
     ==render partial: 'goals/pie_chart', locals: {goals: @team.goals, goal_scope: {team: @team.to_param}}
