--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -1,21 +1,19 @@
+.noprint
+  = render 'goals/breadcrumb'
 .row
-  .col-md-8
-    h1 GDS Groups & Teams
-    p.lede Below are the various business groups and teams who will be delivering these goals. Groups are ordered by descending budget size.
-  -if is_admin?
-    .col-md-4
-      .pull-right
-        br
-        br
-        br
-        =link_to "Create a new group", new_group_path
+  .col-sm-8
+    h1 GDS Goals Q3 2016
+    -if is_admin?
+      .admin
+        ul
+          li =link_to "Create a new group", new_group_path
 .row
   - counter = 0
   - Group.all.order(:name).each do |group|
     - counter += 1
     .col-xs-6
       h2.heading-large =link_to group.name, group
-      p £#{group.budget_in_millions}m - #{group.headcount} people - #{group.goals.count} goals
+      /p £#{group.budget_in_millions}m - #{group.headcount} people - #{group.goals.count} goals
       /p #{pluralize group.goals.count, "Goal"} - #{group.goals_without_a_team.count} without a team
       -if group.teams.count > 0
         ul.biglist
