--- a/app/views/groups/new.html.slim
+++ b/app/views/groups/new.html.slim
@@ -1,9 +1,4 @@
 .page-header
-  = link_to groups_path, class: 'btn btn-default' do 
-    span.glyphicon.glyphicon-list-alt
-    |  Back 
-  h1
-    | New 
-    | group
+  h1 New group
 
 = render 'form'
