--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,11 +26,11 @@
         =link_to "GDS Goals", root_path, :id=>"proposition-name"
         - if (signed_in?)
           ul#proposition-links
-            li =link_to "Vision", goals_path
-            li =link_to "Groups and Teams", groups_path
-            li = link_to "SDP goals", sdp_goals_path
+            /li =link_to "Home", goals_path
+            /li =link_to "Groups and Teams", groups_path
+            /li = link_to "SDP goals", sdp_goals_path
             /li =link_to "Teams", teams_path
-            li =link_to "About", about_path
+            /li =link_to "About", about_path
             -if is_admin?
               li =link_to "Manage users", users_path
 - content_for :body_end
