--- a/app/views/teams/new.html.slim
+++ b/app/views/teams/new.html.slim
@@ -1,9 +1,3 @@
-.page-header
-  = link_to teams_path, class: 'btn btn-default' do 
-    span.glyphicon.glyphicon-list-alt
-    |  Back 
-  h1
-    | New 
-    | team
+h1 New Team
 
 = render 'form'
