--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,6 +1,10 @@
 .row
   .col-md-12
-    h1.heading-xlarge GDS Delivery Dashboard
-    p.lead This site explains what GDS is delivering in the 2016/17 financial year. It is currently only open to GDS & Cabinet Office staff.
+    h1.heading-xlarge Delivery Dashboard
+    / p.lead This site explains what GDS is delivering in the 2016/17 financial year. It is currently only open to GDS & Cabinet Office staff.
 
-    = link_to "Sign in", "/auth/google_oauth2", :class=>"button button-start"
+    .panel.danger
+      center
+        h2 This tool is no longer being maintained.
+        
+    /= link_to "Sign in", "/auth/google_oauth2", :class=>"button button-start"
